--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
         </tr>
         <tr>
             <td></td>
-            <td id="t-image"><img src="https://picsum.photos/100" alt="Sample Image"></td>
+            <td id="t-image"><img src=https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg alt="Sample Image"></td>
             <td></td>
         </tr>
         <tr class="blue">
