--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <table id="table-1" class="middle">
         <tr>
             <td id="t11">left</td>
-            <td id="t12">centre</td>
+            <td id="t12" class="center">centre</td>
             <td id="t13">right</td>
         </tr>
         <tr>
