--- a/main.html
+++ b/main.html
@@ -17,17 +17,17 @@
     <table id="table-1" class="middle">
         <tr>
             <td id="t11">left</td>
-            <td id="t12" class="center">centre</td>
-            <td id="t13">right</td>
+            <td id="t12" class="center">center</td>
+            <td id="t13" class="right">right</td>
         </tr>
         <tr>
             <td>left</td>
-            <td>centre</td>
+            <td>center</td>
             <td>right</td>
         </tr>
         <tr>
             <td>left</td>
-            <td>centre</td>
+            <td>center</td>
             <td>right</td>
         </tr>
     </table>
